--- a/index.html
+++ b/index.html
@@ -384,10 +384,8 @@ let slideTimer = setInterval(() => changeSlide(1), 4000);
   <!-- Footer -->
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
   <div class="bg-white py-4 mb-4">
-    <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12" />
-  </div>
-  <div>© 2025 Kristina Linkem Land Real Estate — Terry Wise & Associates</div>
-  <div class="flex justify-center items-center gap-6 mt-6">
+  <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12 mb-4" />
+  <div class="flex justify-center items-center gap-6">
     <a href="https://www.facebook.com/KristinaLinkemRealEstate" target="_blank">
       <img src="facebook-icon.png" alt="Facebook" class="h-6" />
     </a>
@@ -398,6 +396,9 @@ let slideTimer = setInterval(() => changeSlide(1), 4000);
       <img src="homes-icon.png" alt="Homes.com" class="h-6" />
     </a>
   </div>
+</div>
+  <div>© 2025 Kristina Linkem Land Real Estate — Terry Wise & Associates</div>
+  
 </footer>
 </body>
 </html>
