--- a/index.html
+++ b/index.html
@@ -120,31 +120,33 @@ body {
   </div>
 </section>
 
-<!-- Featured Listings by Area -->
-<section class="bg-gray-50 py-20 px-6">
-  <div class="max-w-7xl mx-auto text-center">
-    <h2 class="text-4xl font-bold text-teal-700 mb-10">Featured Listings by Area</h2>
-    <div class="grid md:grid-cols-3 gap-8">
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold text-teal-700 mb-2">Bonney Lake</h3>
-        <p class="text-gray-700 text-sm mb-4">Active listings in one of the region’s fastest-growing communities.</p>
-        <a href="https://www.homes.com/bonney-lake-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold text-teal-700 mb-2">Enumclaw</h3>
-        <p class="text-gray-700 text-sm mb-4">Browse properties in a charming, close-knit community near Mt. Rainier.</p>
-        <a href="https://www.homes.com/enumclaw-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold text-teal-700 mb-2">Moses Lake</h3>
-        <p class="text-gray-700 text-sm mb-4">See waterfront and vacation homes available in sunny Eastern Washington.</p>
-        <a href="https://www.homes.com/moses-lake-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
-      </div>
+
+
+
+
+
+
+<!-- Neighborhoods and Local Expertise -->
+<section id="about" class="bg-white py-20 px-6">
+  <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+    <div>
+      <img src="KristinaHeadshot.jpg" alt="Kristina Linkem" class="rounded-2xl shadow-lg mx-auto" />
+    </div>
+    <div>
+      <div class="flex items-center gap-4 mb-6">
+  <img src="KristinaPhoto.jpg" alt="Kristina Linkem" class="h-12 w-12 rounded-full object-cover" />
+  <h2 class="text-4xl font-bold text-teal-700">Meet Kristina</h2>
+</div>
+      <p class="text-lg text-gray-700 leading-relaxed mb-4">
+        With years of experience in residential real estate and a deep connection to the communities she serves, Kristina Linkem is committed to helping clients find their ideal home or sell with confidence.
+      </p>
+      <p class="text-lg text-gray-700 leading-relaxed">
+        Whether you're seeking waterfront views, room to grow, or a peaceful place to put down roots, Kristina brings insight, professionalism, and heart to every transaction. Her goal is to provide a smooth and rewarding experience, no matter where you are in your journey.
+      </p>
     </div>
   </div>
 </section>
 
-<!-- Neighborhoods and Local Expertise -->
 <section class="bg-white py-20 px-6">
   <div class="max-w-7xl mx-auto">
     <h2 class="text-4xl font-bold text-teal-700 text-center mb-10">Neighborhoods Kristina Knows</h2>
@@ -175,26 +177,32 @@ body {
       </div>
     </div>
   </div>
-</section>
 
-<section id="about" class="py-20 px-6 bg-gray-50">
-    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-      <img src="kristina-professional.jpg" alt="Kristina Linkem professional" class="rounded-2xl shadow-2xl" />
-      <div>
-        <h2 class="text-4xl font-bold mb-6 text-teal-700">Meet Kristina Linkem</h2>
-        <p class="text-gray-700 mb-6 text-lg leading-relaxed">With years of experience and a passion for helping clients find the perfect home, Kristina brings a warm, personalized approach to real estate. Whether you're buying, selling, or investing, her local knowledge and hands-on service ensure you're in good hands.</p>
-        <div class="flex items-center gap-4 mt-6">
-          <img src="kristina-headshot.jpg" alt="Kristina Linkem headshot" class="w-20 h-20 rounded-full shadow-lg border-4 border-white" />
-          <div>
-            <p class="font-semibold text-lg">Kristina Linkem</p>
-            <p class="text-sm text-gray-500">Terry Wise & Associates</p>
-          </div>
-        </div>
+<!-- Featured Listings by Area -->
+<section class="bg-gray-50 py-20 px-6">
+  <div class="max-w-7xl mx-auto text-center">
+    <h2 class="text-4xl font-bold text-teal-700 mb-10">Featured Listings by Area</h2>
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <h3 class="text-xl font-bold text-teal-700 mb-2">Bonney Lake</h3>
+        <p class="text-gray-700 text-sm mb-4">Active listings in one of the region’s fastest-growing communities.</p>
+        <a href="https://www.homes.com/bonney-lake-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <h3 class="text-xl font-bold text-teal-700 mb-2">Enumclaw</h3>
+        <p class="text-gray-700 text-sm mb-4">Browse properties in a charming, close-knit community near Mt. Rainier.</p>
+        <a href="https://www.homes.com/enumclaw-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <h3 class="text-xl font-bold text-teal-700 mb-2">Moses Lake</h3>
+        <p class="text-gray-700 text-sm mb-4">See waterfront and vacation homes available in sunny Eastern Washington.</p>
+        <a href="https://www.homes.com/moses-lake-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Featured Listings Anchor -->
+
   <section id="listings" class="bg-gradient-to-b from-teal-100 to-white py-20 px-6">
   <div class="max-w-5xl mx-auto text-center">
     <h2 class="text-4xl font-bold text-teal-800 mb-8">Waterfront Lots – Moses Lake</h2>
@@ -384,6 +392,13 @@ let slideTimer = setInterval(() => changeSlide(1), 4000);
   <!-- Footer -->
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
   <div class="bg-white py-4 mb-4">
+  <div class="flex justify-center items-center gap-4 mb-4">
+    <img src="KristinaPhoto.jpg" alt="Kristina Linkem" class="h-12 w-12 rounded-full object-cover" />
+    <div class="text-center">
+      <p class="text-gray-900 font-semibold">Kristina Linkem</p>
+      <p class="text-gray-600 text-sm">Terry Wise & Associates</p>
+    </div>
+  </div>
   <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12 mb-4" />
   <div class="flex justify-center items-center gap-6">
     <a href="https://www.facebook.com/KristinaLinkemRealEstate" target="_blank">
