--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@ body {
 <section id="about" class="bg-white py-20 px-6">
   <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center">
     <div>
-      <img src="kristina-headshot.jpg" alt="Kristina Linkem" class="rounded-2xl shadow-lg mx-auto" />
+      <img src="kristina-professional.jpg" alt="Kristina Linkem" class="rounded-2xl shadow-lg mx-auto" />
     </div>
     <div>
       <h2 class="text-4xl font-bold text-teal-700 mb-6">Meet Kristina Linkem</h2>
 <div class="flex items-center gap-4">
-  <img src="kristina-professional.jpg" alt="Kristina Linkem" class="h-12 w-12 rounded-full object-cover" />
+  <img src="kristina-headshot.jpg" alt="Kristina Linkem" class="h-12 w-12 rounded-full object-cover" />
   <div class="text-left">
     <p class="text-gray-900 font-semibold">Kristina Linkem</p>
     <p class="text-gray-600 text-sm">Terry Wise & Associates</p>
