--- a/index.html
+++ b/index.html
@@ -134,12 +134,8 @@ body {
     </div>
     <div>
       <h2 class="text-4xl font-bold text-teal-700 mb-6">Meet Kristina Linkem</h2>
-<div class="flex items-center gap-4">
-  <img src="kristina-headshot.jpg" alt="Kristina Linkem" class="h-12 w-12 rounded-full object-cover" />
-  <div class="text-left">
-    <p class="text-gray-900 font-semibold">Kristina Linkem</p>
-    <p class="text-gray-600 text-sm">Terry Wise & Associates</p>
-  </div>
+<div class="mt-8">
+  
 </div>
       <p class="text-lg text-gray-700 leading-relaxed mb-4">
         With years of experience in residential real estate and a deep connection to the communities she serves, Kristina Linkem is committed to helping clients find their ideal home or sell with confidence.
@@ -147,6 +143,13 @@ body {
       <p class="text-lg text-gray-700 leading-relaxed">
         Whether you're seeking waterfront views, room to grow, or a peaceful place to put down roots, Kristina brings insight, professionalism, and heart to every transaction. Her goal is to provide a smooth and rewarding experience, no matter where you are in your journey.
       </p>
+      <div class="mt-8 flex justify-center items-center gap-4">
+        <img src="kristina-headshot.jpg" alt="Kristina Linkem" class="h-16 w-16 rounded-full object-cover" />
+        <div class="text-left">
+          <p class="text-gray-900 font-semibold">Kristina Linkem</p>
+          <p class="text-gray-600 text-sm">Terry Wise & Associates</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -182,6 +185,11 @@ body {
     </div>
   </div>
 
+
+
+
+  
+
 <!-- Featured Listings by Area -->
 <section class="bg-gray-50 py-20 px-6">
   <div class="max-w-7xl mx-auto text-center">
@@ -202,39 +210,6 @@ body {
         <p class="text-gray-700 text-sm mb-4">See waterfront and vacation homes available in sunny Eastern Washington.</p>
         <a href="https://www.homes.com/moses-lake-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
       </div>
-    </div>
-  </div>
-</section>
-
-
-  <section id="listings" class="bg-gradient-to-b from-teal-100 to-white py-20 px-6">
-  <div class="max-w-5xl mx-auto text-center">
-    <h2 class="text-4xl font-bold text-teal-800 mb-8">Waterfront Lots – Moses Lake</h2>
-    <img src="lakefront-aerial-view.jpg" alt="Waterfront lot diagram" class="rounded-2xl shadow-xl mx-auto mb-8 max-h-[400px] object-cover" />
-    <p class="text-gray-700 mb-6 text-lg">Check out these 1/4 acre building lots positioned on the lake. Low bank private access, ready to build. Priced from $175,000 to $250,000—waterfront dream living made achievable!</p>
-    <ul class="text-left text-gray-700 space-y-3 max-w-xl mx-auto text-base">
-      <li>✔️ Exclusive 22 Lots with Gated Entry</li>
-      <li>✔️ 326' of Lake Front</li>
-      <li>✔️ Community Park & Dock</li>
-      <li>✔️ 4 Bedroom Septic Designs</li>
-      <li>✔️ Cascade Valley Water & Grant County Jurisdiction</li>
-      <li>✔️ Room for Inground Pool, Sports Court, Garage or Gardens</li>
-    </ul>
-    <a href="https://www.cribflyer.com/3485-valley-road-ne-moses-lake" target="_blank" class="inline-block mt-8 text-white bg-teal-600 hover:bg-teal-700 transition px-8 py-3 rounded-full font-semibold shadow-md">View Full Listing</a>
-  </div>
-
-  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center mt-20">
-    <img src="map-of-parcels.jpg" alt="Golden Given Parcels aerial" class="rounded-2xl shadow-xl" />
-    <div>
-      <h2 class="text-4xl font-bold text-teal-700 mb-6">Two Parcels – Golden Given Rd E, Tacoma</h2>
-      <p class="text-gray-700 mb-6 text-lg">1.38 acres total, zoned Community Employment. Entitlements in process for a large warehouse with wetland approval, SEPA submitted, sewer plan approved, and water availability confirmed.</p>
-      <ul class="text-gray-700 space-y-2 text-base">
-        <li>✔️ Continue with warehouse development or adjust to maximize each parcel</li>
-        <li>✔️ CE zoning allows contractor yard, storage, daycare, restaurant, offices, warehouse, auto, and industrial uses</li>
-        <li>✔️ MLS 2348047 – $925,000</li>
-        <li>✔️ Address: 10510 and 10514 Golden Given Rd E, Tacoma</li>
-      </ul>
-      <a href="https://www.crexi.com/properties/1841620/washington-two-parcels---golden-given" target="_blank" class="inline-block mt-8 text-white bg-teal-600 hover:bg-teal-700 transition px-8 py-3 rounded-full font-semibold shadow-md">View Full Listing</a>
     </div>
   </div>
 </section>
