--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@ body {
     <h2 class="text-4xl font-bold text-teal-700 text-center mb-10">Current Featured Listings</h2>
     <div class="grid md:grid-cols-2 gap-12">
       <div class="bg-white p-6 rounded-xl shadow-md">
-        <img src="Waterfront.jpg" alt="Waterfront Lots" class="rounded-lg shadow mb-4" />
+        <img src="waterfront-lots.jpg" alt="Waterfront Lots" class="rounded-lg shadow mb-4" />
         <h3 class="text-2xl font-bold text-teal-700 mb-2">Waterfront Lots – Moses Lake</h3>
         <p class="text-gray-700 mb-2">1/4 acre building lots on low-bank lakefront. Gated, ready to build with 4-bed septic, Cascade Valley Water, and private access.</p>
         <p class="text-sm text-gray-600">Prices: $175,000–$250,000 • Exclusive 22 lots • Room for pool/sport court</p>
         <a href="https://www.cribflyer.com/3485-valley-road-ne-moses-lake" target="_blank" class="inline-block mt-4 text-white bg-teal-600 px-5 py-2 rounded-full hover:bg-teal-700 transition">View Details</a>
       </div>
       <div class="bg-white p-6 rounded-xl shadow-md">
-        <img src="golden-parcels.jpg" alt="Golden Given Parcels" class="rounded-lg shadow mb-4" />
+        <img src="golden-given-parcels.jpg" alt="Golden Given Parcels" class="rounded-lg shadow mb-4" />
         <h3 class="text-2xl font-bold text-teal-700 mb-2">Two Parcels – Tacoma</h3>
         <p class="text-gray-700 mb-2">1.38 acres zoned Community Employment with wetland approval, SEPA submitted, and sewer/water access. Plans for large warehouse or reconfigure for max value.</p>
         <p class="text-sm text-gray-600">MLS 2348047 • $925,000 • 10510 & 10514 Golden Given Rd E</p>
@@ -212,29 +212,7 @@ body {
 
   
 
-<!-- Featured Listings by Area -->
-<section class="bg-gray-50 py-20 px-6">
-  <div class="max-w-7xl mx-auto text-center">
-    <h2 class="text-4xl font-bold text-teal-700 mb-10">Featured Listings by Area</h2>
-    <div class="grid md:grid-cols-3 gap-8">
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold text-teal-700 mb-2">Bonney Lake</h3>
-        <p class="text-gray-700 text-sm mb-4">Active listings in one of the region’s fastest-growing communities.</p>
-        <a href="https://www.homes.com/bonney-lake-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold text-teal-700 mb-2">Enumclaw</h3>
-        <p class="text-gray-700 text-sm mb-4">Browse properties in a charming, close-knit community near Mt. Rainier.</p>
-        <a href="https://www.homes.com/enumclaw-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold text-teal-700 mb-2">Moses Lake</h3>
-        <p class="text-gray-700 text-sm mb-4">See waterfront and vacation homes available in sunny Eastern Washington.</p>
-        <a href="https://www.homes.com/moses-lake-wa/homes-for-sale/" target="_blank" class="text-white bg-teal-600 px-5 py-2 rounded-full font-medium hover:bg-teal-700 transition">View Listings</a>
-      </div>
-    </div>
-  </div>
-</section>
+
 
   <!-- Footer anchor setup -->
   <section id="testimonials" class="py-20 px-6 bg-gray-50">
@@ -410,7 +388,7 @@ let slideTimer = setInterval(() => changeSlide(1), 4000);
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
   <div class="bg-white py-4 mb-4">
   <div class="flex justify-center items-center gap-4 mb-4">
-    <img src="KristinaPhoto.jpg" alt="Kristina Linkem" class="h-12 w-12 rounded-full object-cover" />
+    <img src=\"kristina-headshot.jpg\" alt=\"Kristina Linkem\" class=\"h-12 w-12 rounded-full object-cover\" />
     
   </div>
   <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12 mb-4" />
