--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@ body {
   <img src="logo.png" alt="Kristina Linkem Logo" class="h-10" />
 </div>
         <nav class="hidden md:flex space-x-6">
-          <a href="#about" class="text-gray-700 hover:text-teal-600">About</a>
-          <a href="#listings" class="text-gray-700 hover:text-teal-600">Listings</a>
-          <a href="#testimonials" class="text-gray-700 hover:text-teal-600">Testimonials</a>
-          <a href="#contact" class="text-gray-700 hover:text-teal-600">Contact</a>
-        </nav>
+  <a href="#about" class="text-gray-700 hover:text-teal-600">Meet Kristina</a>
+  <a href="#listings" class="text-gray-700 hover:text-teal-600">Listings</a>
+  <a href="#neighborhoods" class="text-gray-700 hover:text-teal-600">Neighborhoods</a>
+  <a href="#testimonials" class="text-gray-700 hover:text-teal-600">Client Experiences</a>
+  <a href="#contact" class="text-gray-700 hover:text-teal-600">Contact</a>
+</nav>
       </div>
     </div>
   </header>
@@ -176,7 +177,7 @@ body {
   </div>
 </section>
 
-<section class="bg-white py-20 px-6">
+<section id="neighborhoods" class="bg-white py-20 px-6">
   <div class="max-w-7xl mx-auto">
     <h2 class="text-4xl font-bold text-teal-700 text-center mb-10">Neighborhoods Kristina Knows</h2>
     <div class="grid md:grid-cols-3 gap-8 text-center">
