--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body {
         <a href="https://www.cribflyer.com/3485-valley-road-ne-moses-lake" target="_blank" class="inline-block mt-4 text-white bg-teal-600 px-5 py-2 rounded-full hover:bg-teal-700 transition">View Details</a>
       </div>
       <div class="bg-white p-6 rounded-xl shadow-md">
-        <img src="golden-given-parcels.jpg" alt="Golden Given Parcels" class="rounded-lg shadow mb-4" />
+        <img src="map-of-parcels.jpg" alt="Golden Given Parcels" class="rounded-lg shadow mb-4" />
         <h3 class="text-2xl font-bold text-teal-700 mb-2">Two Parcels – Tacoma</h3>
         <p class="text-gray-700 mb-2">1.38 acres zoned Community Employment with wetland approval, SEPA submitted, and sewer/water access. Plans for large warehouse or reconfigure for max value.</p>
         <p class="text-sm text-gray-600">MLS 2348047 • $925,000 • 10510 & 10514 Golden Given Rd E</p>
@@ -389,7 +389,7 @@ let slideTimer = setInterval(() => changeSlide(1), 4000);
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
   <div class="bg-white py-4 mb-4">
   <div class="flex justify-center items-center gap-4 mb-4">
-    <img src=\"kristina-headshot.jpg\" alt=\"Kristina Linkem\" class=\"h-12 w-12 rounded-full object-cover\" />
+    <img src="kristina-headshot.jpg\" alt=\"Kristina Linkem\" class=\"h-12 w-12 rounded-full object-cover\" />
     
   </div>
   <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12 mb-4" />
