--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ let slideTimer = setInterval(() => changeSlide(1), 4000);
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
   <div class="bg-white py-4 mb-4">
   <div class="flex justify-center items-center gap-4 mb-4">
-    <img src="kristina-headshot.jpg\" alt=\"Kristina Linkem\" class=\"h-12 w-12 rounded-full object-cover\" />
+    <img src="kristina-headshot.jpg" alt=\"Kristina Linkem\" class=\"h-12 w-12 rounded-full object-cover\" />
     
   </div>
   <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12 mb-4" />
