--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body {
     <h2 class="text-4xl font-bold text-teal-700 text-center mb-10">Current Featured Listings</h2>
     <div class="grid md:grid-cols-2 gap-12">
       <div class="bg-white p-6 rounded-xl shadow-md">
-        <img src="waterfront-lots.jpg" alt="Waterfront Lots" class="rounded-lg shadow mb-4" />
+        <img src="w class="rounded-lg shadow mb-4" />
         <h3 class="text-2xl font-bold text-teal-700 mb-2">Waterfront Lots – Moses Lake</h3>
         <p class="text-gray-700 mb-2">1/4 acre building lots on low-bank lakefront. Gated, ready to build with 4-bed septic, Cascade Valley Water, and private access.</p>
         <p class="text-sm text-gray-600">Prices: $175,000–$250,000 • Exclusive 22 lots • Room for pool/sport court</p>
@@ -389,7 +389,7 @@ let slideTimer = setInterval(() => changeSlide(1), 4000);
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
   <div class="bg-white py-4 mb-4">
   <div class="flex justify-center items-center gap-4 mb-4">
-    <img src="kristina-headshot.jpg" alt=\"Kristina Linkem\" class=\"h-12 w-12 rounded-full object-cover\" />
+    <img src="kristina-headshot.jpg" alt="Kristina Linkem" class="h-12 w-12 rounded-full object-cover" />
     
   </div>
   <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12 mb-4" />
