--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body {
         <h3 class="text-2xl font-bold text-teal-700 mb-2">Waterfront Lots – Moses Lake</h3>
         <p class="text-gray-700 mb-2">1/4 acre building lots on low-bank lakefront. Gated, ready to build with 4-bed septic, Cascade Valley Water, and private access.</p>
         <p class="text-sm text-gray-600">Prices: $175,000–$250,000 • Exclusive 22 lots • Room for pool/sport court</p>
-        <a href="https://www.cribflyer.com/3485-valley-road-ne-moses-lake" target="_blank" class="inline-block mt-4 text-white bg-teal-600 px-5 py-2 rounded-full hover:bg-teal-700 transition">View Details</a>
+        <a href="https://www.homes.com/real-estate-agents/kristina-linkem/lqtlndg/?tab=2&dk=7f29nrjrmg5fq" target="_blank" class="inline-block mt-4 text-white bg-teal-600 px-5 py-2 rounded-full hover:bg-teal-700 transition">View Details</a>
       </div>
       <div class="bg-white p-6 rounded-xl shadow-md">
         <img src="map-of-parcels.jpg" alt="Golden Given Parcels" class="rounded-lg shadow mb-4" />
